--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<!-- HEADER  CONTENT-->
 		<header class="row pt-3 pb-3 mb-4 border-bottom">
 			<div class="col-1 col-md-1">
-				<img class="header-logo" src="https://cdn.worldvectorlogo.com/logos/udacity.svg" alt="">
+				<img class="header-logo" src="img/logo.min.svg" alt="">
 			</div>
 			<div class="col-11 col-md-11">
 				<h1 class="header-title text-right">
